# keyboard2deck

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml
src/: app.rs  config.rs  device.rs  keyboard.rs  main.rs
src/macros/: mod.rs  shell.rs  shortcut.rs
