[package]
name = "keyboard2deck"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
hidapi = "1.3.2"
rdev= {version = "*", features = ["serialize"] }
serde_yaml="*"
serde="*"
signal-hook = "0.3.13"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"